Remove test, the hack in the portraitUtil class doesn't work anymore